Text changes. Mostly spillting up bandwurmsaetze

--- a/final_report.tex
+++ b/final_report.tex
@@ -37,7 +37,7 @@ Lecture ``Software Testing, Verification and Analysis''\\ Winter Term 2015/2016\
 
 \section{Introduction}
 
-The current generation of web browsers (Internet Explorer, Chrome, Firefox, and Safari) are mostly built on old and large code bases, and important design decisions whose results are visible still today have been made in a time where the IT landscape looked vastly different in terms of hardware, end-user device form factors, and security.
+The current generation of web browsers (Internet Explorer, Chrome, Firefox, and Safari) are mostly built on old and large code bases. Important design decisions whose results are visible still today have been made in a time where the IT landscape looked vastly different in terms of hardware, end-user device form factors, and security.
 
 The Servo project aims at building a new browser engine for today's requirements. It is designed to be highly parallel, leveraging multi-core hardware and saving power on mobile devices, and exceptionally secure, by using a new programming language that eliminates certain classes of security-relevant programming errors.
 
@@ -70,7 +70,7 @@ Servo is an open source project hosted on GitHub\footnote{\url{https://github.co
     \item The reviewer states his approval, triggers the build bot to run automated tests and merges the pull request
 \end{enumerate}
 
-Every pull request needs to pass the contribution checklist\footnote{\label{contributing}\url{https://github.com/servo/servo/blob/master/CONTRIBUTING.md}}. It covers technicalities such as: Every change needs to be accompanied by ``tests relevant to the fixed bug or new feature''\footnote{See footnote \ref{contributing}.},  which is to be evaluated by one of the reviewers from the core team, but it also includes the Rust Code of Conduct\footnote{\url{http://www.rust-lang.org/conduct.html}} to ensure a friendly and welcoming environment for all contributors.
+Every pull request needs to pass the contribution checklist\footnote{\label{contributing}\url{https://github.com/servo/servo/blob/master/CONTRIBUTING.md}}. It covers technicalities such as: Every change needs to be accompanied by ``tests relevant to the fixed bug or new feature''\footnote{See footnote \ref{contributing}.},  which is to be evaluated by one of the reviewers from the core team. It also includes the Rust Code of Conduct\footnote{\url{http://www.rust-lang.org/conduct.html}} to ensure a friendly and welcoming environment for all contributors.
   
 Defect testing is done through an extensive testing system. It is maintained by every developer as every code change needs to be accompanied by tests. The test suite is executed on every reviewed pull request by a build bot (bors-servo\footnote{\url{https://github.com/bors-servo}}) on a dedicated server farm\footnote{\url{https://github.com/servo/servo/wiki/Buildbot-administration}}. This ensures that existing functionality is not broken by new code.
 
@@ -81,9 +81,9 @@ As with most open source projects hosted on GitHub, the issue tracker\footnote{\
 
 \subsection{Current Testing Status} \label{test_status}
 
-As of January 2016 the code base of Servo core (without dependencies) contains 110,000 lines of code. These are tested with over 11,000 tests that are run using different commands:
+As of January 2016 the code base of Servo core (without dependencies) contains about 110,000 lines of code. These are tested with over 11,000 tests that are run using different commands:
 \begin{itemize}
-    \item \textbf{./mach test-unit}: Runs 233 low level test binaries, that test important code. Especially used in dependencies.
+    \item \textbf{./mach test-unit}: Runs 233 low level test binaries, that test important core code. Especially used in dependencies.
     \item \textbf{./mach test-wpt}: Runs 3764 Web Platform Tests (WPT). 
     \item \textbf{./mach test-css}: Runs 7097 CSS Working Group tests.
     \item \textbf{./mach test-ref}: Runs 5 reference tests (including the famous acid2 test\footnote{\url{http://www.webstandards.org/files/acid2/test.html}}). These consist of rendering two pages and comparing them.
@@ -102,9 +102,9 @@ Mozilla's build system ``mach'' (from the German word ``machen'': to do) is at t
 
 
 \subsection{Servo's Roadmap}
-Short-term goals of the Servo project are Windows support, finishing WebRender, a GPU-based rendering engine, and adding a GUI to Servo, whose window currently consists solely of the rendered output without GUI controls.
+Short-term goals of the Servo project are Windows support, finishing WebRender, a GPU-based rendering engine, and adding a graphical user interface (GUI) to Servo, whose window currently consists solely of the rendered output without GUI controls.
  
-Being a research project, Servo's long-term outcomes are rather open-ended, but preliminary performance testing shows major advantages over Gecko, the engine of Firefox, besides the security improvements that come naturally with choosing Rust and large architectural improvements made possible by the clean-slate approach. Replacing Gecko with Servo in Mozilla's Firefox products appears like a reasonable goal, albeit the project is years away from implementing all of Gecko's functionality. As a compromise, Mozilla plans to use smaller, isolated modules written for Servo in Gecko, and will evaluate the feasibility of a standalone Servo browser, most likely starting with the Android platform\footnote{\url{https://github.com/servo/servo/wiki/Roadmap}}.
+Being a research project, Servo's long-term outcomes are rather open-ended. Preliminary performance testing already shows major advantages over Gecko, the current engine of Mozilla Firefox, besides the security improvements that come naturally with choosing Rust. Furthermore large architectural improvements have been made possible by the clean-slate approach. Replacing Gecko with Servo in Mozilla's Firefox products appears like a reasonable goal, albeit the project is years away from implementing all of Gecko's functionality. As a compromise, Mozilla plans to use smaller, isolated modules written for Servo in Gecko, and will evaluate the feasibility of a standalone Servo browser, most likely starting with the Android platform\footnote{\url{https://github.com/servo/servo/wiki/Roadmap}}.
 
 
 
@@ -199,29 +199,29 @@ Servo uses \texttt{cargo test} for running the unit tests. For running the more 
 No type of coverage has ever been calculated for the whole Servo project, not even basic statement coverage. As this is one of the most common ways to indicate the completeness of a test suite we looked into generating a coverage report for Servo. We also hoped to find parts in the code base that are not yet covered by tests, which we could then examine further. 
 
 \paragraph{gcov}
-Gcov\footnote{\url{https://gcc.gnu.org/onlinedocs/gcc/Gcov.html}} is a widely used source code coverage analysis tool that comes with the GNU Compiler Collection (GCC). It is supposed to work with any LLVM-generated files. As the Rust compiler rustc uses LLVM as its backend we tried gcov first to generate a useable test coverage report. Unfortunately, rustc does not yet support all of LLVM's flags that gcov needs to produce coverage data\footnote{Section 4 in \url{http://ltp.sourceforge.net/documentation/technical_papers/gcov-ols2003.pdf}}. This issue has already been reported\footnote{\url{https://github.com/rust-lang/rfcs/issues/646}} but was postponed a year ago due to the 1.0 release of rustc\footnote{\url{https://github.com/rust-lang/rust/issues/690}}. We briefly considered implementing gcov support for rustc, which would enable all rust projects to easily generate test coverage reports, but quickly realized that it would be out of scope.
+Gcov\footnote{\url{https://gcc.gnu.org/onlinedocs/gcc/Gcov.html}} is a widely used source code coverage analysis tool that comes with the GNU Compiler Collection (GCC). It works with any LLVM-generated files. As the Rust compiler rustc uses LLVM as its backend we tried gcov first to generate a useable test coverage report. Unfortunately, rustc does not yet support all of LLVM's flags that gcov needs to produce coverage data\footnote{Section 4 in \url{http://ltp.sourceforge.net/documentation/technical_papers/gcov-ols2003.pdf}}. This issue has already been reported\footnote{\url{https://github.com/rust-lang/rfcs/issues/646}} but was postponed a year ago due to the 1.0 release of rustc\footnote{\url{https://github.com/rust-lang/rust/issues/690}}. We briefly considered implementing gcov support for rustc, which would enable all rust projects to easily generate test coverage reports, but quickly realized that it would be out of scope.
 
 \paragraph{kcov}
-The community suggested to try the tool kcov\footnote{\url{https://simonkagstrom.github.io/kcov/}}, which has been used successfully for smaller Rust projects. It works by inserting breakpoints into every line of code and checking them off when they are triggered. This increases execution time significantly but proves to be a robust way to generate code coverage, as it works on arbitrary binaries with debug symbols. Therefore, generating correct debug symbols is enough to let kcov produce a test coverage report. Unfortunately, it does not compile on Mac OS or Windows, so we had to run our tests in a Linux (Ubuntu) virtual machine, which slows down test execution even more. Another issue we faced was that the version provided by the package manager (apt-get) was out of date. Compiling kcov from source failed at first, but was quickly fixed by adding another dependency (libbfd-dev) to the build flags.\\
+The community suggested to try the tool kcov\footnote{\url{https://simonkagstrom.github.io/kcov/}}, which has been used successfully for smaller Rust projects. It works by inserting breakpoints into every line of code and recording when they are triggered. This increases execution time significantly but proves to be a robust way to generate code coverage, as it works on arbitrary binaries with debug symbols. Therefore, generating correct debug symbols is enough to let kcov produce a test coverage report. Unfortunately, it does not compile on Mac OS or Windows, so we had to run our tests in a Linux (Ubuntu) virtual machine, which slows down test execution even more. Another issue we faced was, that the version provided by the package manager (apt-get) was out of date. Compiling kcov from source failed at first, but was quickly fixed by adding another dependency (libbfd-dev) to the build flags.\\
 
 Since Servo relies on mach to prepare the running environment, we couldn't start kcov on the Servo binary directly. Instead, our first coverage report was created by moving the Servo binary to servo\_orig and placing the following script in its place:
 
 \begin{verbatim}
 
 #!/bin/sh
-kcov --verify --exclude-pattern=/.cargo,../src /home/joda/servo/cov 
- /home/joda/servo/servo-sync/target/debug/servo_orig "$@"
+kcov --verify --exclude-pattern=/.cargo,../src /home/johannes/servo/cov 
+ /home/johannes/servo/servo-sync/target/debug/servo_orig "$@"
 
 \end{verbatim}
 
-Now executing \textbf{./mach test} would run our script instead of the Servo binary, which passes all parameters to the original Servo binary but also executes kcov. In theory this should have yielded a complete test coverage report as kcov is also supposed to properly merge several executions of the same binary, which was a necessary feature since mach restarts Servo for each of its tests. Unfortunately, each test took about 30-60 seconds, which implied a whole week of running time to generate a complete coverage report. Additionally, the merging of reports was not working correctly for us, but as the long execution time already disqualified kcov as a feasible coverage tool, we did not continue working on fixing the merging problem.\\
+Now executing \textbf{./mach test} would run our script instead of the Servo binary, which passes all parameters to the original Servo binary but also executes kcov. In theory this should have yielded a complete test coverage report as kcov should also properly merge several executions of the same binary. This would be a necessary feature since mach restarts Servo for each of its tests. Unfortunately, each test took about 30-60 seconds, which implied a whole week of running time to generate a complete coverage report. Additionally, the merging of reports was not working correctly for us, but as the long execution time already disqualified kcov as a feasible coverage tool, we did not continue working on fixing the merging problem.\\
 
 Additionally, the partial coverage reports we got differed from test run to test run. Lines of code covered by one exemplary test ranged from 26976 to 27104 throughout several iterations. These fluctuations are probably caused by non-deterministic behavior of Servo but could also be caused by inaccurate coverage reports on kcov's side. We can not be completely sure as it seemed infeasible to check the roughly 30,000 lines that were executed in one test run and trace the execution path.
 
 
 \subsection{Fuzzy Testing Using afl.rs}
 
-afl.rs\footnote{\url{https://github.com/frewsxcv/afl.rs}}, based on American fuzzy lop\footnote{\url{http://lcamtuf.coredump.cx/afl/}}, is a package that allows finding bugs in Rust code through fuzzy testing. It works by taking exemplary input over stdin and mutating it. As a consequence, it requires that the binary to test reads its input over stdin. As Servo does not do this, we looked at Servos html-parser html5ever\footnote{\url{https://github.com/servo/html5ever}} instead. Here we built a test binary that would read html code over stdin and try to parse it. During the setup, we realized that afl.rs currently requires quite an old version of Rust (1.2) due to a bug in newer Rust versions\footnote{\url{https://github.com/frewsxcv/afl.rs/issues/11}}. html5ever, on the other hand, required at least Rust 1.4 to work. This problem deemed fuzzy testing the html5ever component or Servo as a whole impossible without extensive debugging of the Rust compiler.
+afl.rs\footnote{\url{https://github.com/frewsxcv/afl.rs}}, based on American fuzzy lop\footnote{\url{http://lcamtuf.coredump.cx/afl/}}, is a package that allows finding bugs in Rust code through fuzzy testing. It works by taking exemplary input over stdin and mutating it. As a consequence, it requires that the binary to test reads its input over stdin. As Servo does not do this, we looked at a smaller component of Servo, the html-parser html5ever\footnote{\url{https://github.com/servo/html5ever}} instead. Here we built a test binary that would read html code over stdin and try to parse it. During the setup, we realized that afl.rs currently requires an old version of Rust (1.2) due to a bug in newer Rust versions\footnote{\url{https://github.com/frewsxcv/afl.rs/issues/11}}. Html5ever, on the other hand, required at least Rust 1.4 to work. This problem deemed fuzzy testing the html5ever component or Servo as a whole impossible without extensive debugging of the Rust compiler.
 
 
 \subsection{Doctests}
@@ -242,7 +242,7 @@ As many other languages, Rust defines a syntax to document source code, and as i
     \end{verbatim}
 }
 
-In Rust, however, these usage examples are executed and tested as part of \texttt{cargo test}. To simplify this process, the example code is automatically completed e.g. with a main function to make it a valid Rust program. More complex examples can be built, e.g. spanning multiple functions, and individual lines can be hidden to focus the user-visible documentation on the relevant parts. The full set of testing facilities, e.g. assertions, is available, making it possible to avoid outdated code examples altogether.
+In Rust however, these usage examples are executed and tested as part of \texttt{cargo test}. To simplify this process, the example code is automatically completed e.g. with a main function to make it a valid Rust program. More complex examples can be built, e.g. spanning multiple functions, and individual lines can be hidden to focus the user-visible documentation on the relevant parts. The full set of testing facilities, e.g. assertions, is available, making it possible to avoid outdated code examples altogether.
 
 
 \newpage
@@ -260,13 +260,13 @@ For Servo, these ASA techniques are a crucial part of its security concept. For 
 
 In the following we describe some of Rust's language concepts that let the Rust compiler prevent certain classes of programming errors that frequently occur in other languages. Finding such errors through static analysis is not always possible in other languages since they are not expressive enough and the programmer can't provide enough information in the code for an ASA tool to perform such an analysis.
 
-\paragraph{Ownership} In Rust, variables and objects are always ``owned'' by a scope (usually, a block of code delimited by curly braces) or another object. This ownership can be moved, for example by calling a method and handing over the object as a parameter, but the language provides no way to copy the ownership to an object. This way, the owner of an object can be statically determined, and, more importantly, each object can be deleted if its owning object is deleted or the owning scope ends. This way, it can be determined at compile-time when each object has to be deleted, completely eliminating use-after-free bugs, a common source for crashes and security vulnerabilities, and preventing most classes of memory leaks. Being a compile-time technique, this does not imply any run-time cost like garbage collectors do, which are used by other, less performance-oriented languages.
+\paragraph{Ownership} In Rust, variables and objects are always ``owned'' by a scope (usually, a block of code delimited by curly braces) or another object. This ownership can be moved, for example by calling a method and handing over the object as a parameter, but the language provides no way to copy the ownership to an object. This way, the owner of an object can be statically determined. More importantly, each object can be deleted if its owning object is deleted or the owning scope ends. This way, it can be determined at compile-time when each object has to be deleted. This completely eliminates use-after-free bugs, a common source for crashes and security vulnerabilities. It also prevents most classes of memory leaks. Being a compile-time technique, this does not imply any run-time cost like garbage collectors do, which are used by other, less performance-oriented languages.
 
-\paragraph{Borrowing} To allow for more flexible movement of data, objects can be temporarily borrowed into other scopes. The compiler statically ensures that there exists either exactly one mutable borrow, through which the object can be mutated, or any number of immutable borrows. By preventing shared mutable state, a lot of programming errors are made impossible, for example data races. A data race occurs if two threads access the same data in an unsynchronized fashion and at least one of them writes. Since there can be only one thread writing at one specific data point at the same time, data races cannot happen. Iterator invalidation is another problem detected at compile time: Since iterating over a container borrows the container, modifying the container, which would need to happen through a mutable borrow, is not possible.
+\paragraph{Borrowing} To allow for more flexible movement of data, objects can be temporarily borrowed into other scopes. The compiler statically ensures that there exists either exactly one mutable borrow, through which the object can be mutated, or any number of immutable borrows. By preventing a shared mutable state, a lot of programming errors are made impossible, for example data races. A data race occurs if two threads access the same data in an unsynchronized fashion and at least one of them writes. Since there can be only one thread writing at one specific data point at the same time, data races cannot happen. Iterator invalidation is another problem detected at compile time: Since iterating over a container borrows the container, modifying the container, which would need to happen through a mutable borrow, is not possible.
 
-\paragraph{Safe memory accesses} Likewise it is not possible to access uninitialized memory and, since pointers are not part of the language, null pointers do not exist as well. Not an ASA technique but related to memory safety are the run-time bounds checks that are mandatory for all Rust data containers.
+\paragraph{Safe memory accesses} Likewise it is not possible to access uninitialized memory and, since pointers are not part of the language, null pointers do not exist as well. Not an ASA technique but related to memory safety, are the run-time bounds checks that are mandatory for all Rust data containers.
 
-\paragraph{Code-generating macros} Rust features a powerful macro syntax. Unlike in C and C++, where macros simply perform text replacements, macros in Rust are hygienic, can generate different code depending on the type of input and take a variable number of parameters among other advantages. In fact, a library has been written that expands regular expressions to native Rust code, enabling a lot of optimization potential as well as compile-time syntax checking on the expression\footnote{\url{https://github.com/rust-lang-nursery/regex}}. Another library enables specifying parsers through a macro-based API\footnote{\url{https://github.com/Geal/nom}}. The resulting parsers are extremely fast and guaranteed to be safe.
+\paragraph{Code-generating macros} Rust features a powerful macro syntax. It has several advantages over C and C++, where macros simply perform text replacements. Macros in Rust are hygienic, can generate different code depending on the type of input and take a variable number of parameters. In fact, a library has been written that expands regular expressions to native Rust code, enabling a lot of optimization potential as well as compile-time syntax checking on the expression\footnote{\url{https://github.com/rust-lang-nursery/regex}}. Another library enables specifying parsers through a macro-based API\footnote{\url{https://github.com/Geal/nom}}. The resulting parsers are extremely fast and guaranteed to be safe.
 
 \paragraph{Other features} There are several smaller features, restrictions and well-chosen defaults of the Rust language that improve the robustness of programs, some of them being ASA techniques: For example, variables are immutable by default, encouraging a less error-prone programming style. Matches (the Rust-equivalent of switch-case statements) must be exhaustive, that is each possible value of the variable that is matched must be handled by a branch, making it impossible for the programmer to forget a case. Integer overflows, being another source of programming errors and security vulnerabilities, make Rust programs crash when compiled in debug mode. And finally, expected runtime errors such as IO-errors must be explicitly handled by the programmer or will lead to an immediate crash of the program, as opposed to undefined behavior in e.g. C and C++.
 
