--- a/final_report.tex
+++ b/final_report.tex
@@ -202,7 +202,7 @@ No type of coverage has ever been calculated for the whole Servo project, not ev
 Gcov\footnote{\url{https://gcc.gnu.org/onlinedocs/gcc/Gcov.html}} is a widely used source code coverage analysis tool that comes with the GNU Compiler Collection (GCC). It works with any LLVM-generated files. As the Rust compiler rustc uses LLVM as its backend we tried gcov first to generate a useable test coverage report. Unfortunately, rustc does not yet support all of LLVM's flags that gcov needs to produce coverage data\footnote{Section 4 in \url{http://ltp.sourceforge.net/documentation/technical_papers/gcov-ols2003.pdf}}. This issue has already been reported\footnote{\url{https://github.com/rust-lang/rfcs/issues/646}} but was postponed a year ago due to the 1.0 release of rustc\footnote{\url{https://github.com/rust-lang/rust/issues/690}}. We briefly considered implementing gcov support for rustc, which would enable all rust projects to easily generate test coverage reports, but quickly realized that it would be out of scope.
 
 \paragraph{kcov}
-The community suggested to try the tool kcov\footnote{\url{https://simonkagstrom.github.io/kcov/}}, which has been used successfully for smaller Rust projects. It works by inserting breakpoints into every line of code and recording when they are triggered. This increases execution time significantly but proves to be a robust way to generate code coverage, as it works on arbitrary binaries with debug symbols. Therefore, generating correct debug symbols is enough to let kcov produce a test coverage report. Unfortunately, it does not compile on Mac OS or Windows, so we had to run our tests in a Linux (Ubuntu) virtual machine, which slows down test execution even more. Another issue we faced was, that the version provided by the package manager (apt-get) was out of date. Compiling kcov from source failed at first, but was quickly fixed by adding another dependency (libbfd-dev) to the build flags.\\
+The community suggested to try the tool kcov\footnote{\url{https://simonkagstrom.github.io/kcov/}}, which has been used successfully for smaller Rust projects. It works by inserting breakpoints into every line of code and recording when they are triggered. This increases execution time significantly but proves to be a robust way to generate code coverage, as it works on arbitrary binaries with debug symbols. Therefore, generating correct debug symbols is enough to let kcov produce a test coverage report. Unfortunately, it does not compile on Mac OS or Windows, so we had to run our tests in a Linux (Ubuntu) virtual machine, which slows down test execution even more. Another issue we faced was that the version provided by the package manager (apt-get) was out of date. Compiling kcov from source failed at first, but was quickly fixed by adding another dependency (libbfd-dev) to the build flags.\\
 
 Since Servo relies on mach to prepare the running environment, we couldn't start kcov on the Servo binary directly. Instead, our first coverage report was created by moving the Servo binary to servo\_orig and placing the following script in its place:
 
@@ -262,7 +262,7 @@ In the following we describe some of Rust's language concepts that let the Rust 
 
 \paragraph{Ownership} In Rust, variables and objects are always ``owned'' by a scope (usually, a block of code delimited by curly braces) or another object. This ownership can be moved, for example by calling a method and handing over the object as a parameter, but the language provides no way to copy the ownership to an object. This way, the owner of an object can be statically determined. More importantly, each object can be deleted if its owning object is deleted or the owning scope ends. This way, it can be determined at compile-time when each object has to be deleted. This completely eliminates use-after-free bugs, a common source for crashes and security vulnerabilities. It also prevents most classes of memory leaks. Being a compile-time technique, this does not imply any run-time cost like garbage collectors do, which are used by other, less performance-oriented languages.
 
-\paragraph{Borrowing} To allow for more flexible movement of data, objects can be temporarily borrowed into other scopes. The compiler statically ensures that there exists either exactly one mutable borrow, through which the object can be mutated, or any number of immutable borrows. By preventing a shared mutable state, a lot of programming errors are made impossible, for example data races. A data race occurs if two threads access the same data in an unsynchronized fashion and at least one of them writes. Since there can be only one thread writing at one specific data point at the same time, data races cannot happen. Iterator invalidation is another problem detected at compile time: Since iterating over a container borrows the container, modifying the container, which would need to happen through a mutable borrow, is not possible.
+\paragraph{Borrowing} To allow for more flexible movement of data, objects can be temporarily borrowed into other scopes. The compiler statically ensures that there exists either exactly one mutable borrow, through which the object can be mutated, or any number of immutable borrows. By preventing shared mutable state, a lot of programming errors are made impossible, for example data races. A data race occurs if two threads access the same data in an unsynchronized fashion and at least one of them writes. Since there can be only one thread writing at one specific data point at the same time, data races cannot happen. Iterator invalidation is another problem detected at compile time: Since iterating over a container borrows the container, modifying the container, which would need to happen through a mutable borrow, is not possible.
 
 \paragraph{Safe memory accesses} Likewise it is not possible to access uninitialized memory and, since pointers are not part of the language, null pointers do not exist as well. Not an ASA technique but related to memory safety, are the run-time bounds checks that are mandatory for all Rust data containers.
 
